[package]
name = "std_collection_traits"
version = "0.1.2"
edition = "2018"
authors = ["Liran Xiao <lrxiao@umich.edu>"]
license = "MIT"
homepage = "https://github.com/Airtnp/collection_traits"
repository = "https://github.com/Airtnp/collection_traits"
description = "Abstraction of operations in std collection types"
keywords = ["collection", "map", "set", "iterator"]
reader = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
